--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "cheerio": "1.0.0-rc.12",
     "eslint": "8.46.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "postcss": "8.4.27",
